Shrink TextRun object size https://bugs.webkit.org/show_bug.cgi?id=85751

Reviewed by Darin Adler.

Reorder the member variables in TextRun so it shrinks from 56 to 40 bytes on my 64-bit build. This is important
for SVG, since RenderSVGText shrinks because of this.

Also add a compile assert for the expected object size.

* platform/graphics/TextRun.cpp:
(ExpectedTextRunSize):
(WebCore):
* platform/graphics/TextRun.h:
(WebCore::TextRun::TextRun):
(WebCore::TextRun::direction):
(TextRun):

Canonical link: https://commits.webkit.org/103325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116260 268f45cc-cd09-0410-ab3c-d52691b4dbfc